--- a/src/app/pages/facebook/create-post/create-post.component.html
+++ b/src/app/pages/facebook/create-post/create-post.component.html
@@ -1,1 +1,31 @@
-<p>create-post works!</p>
+<div class="card">
+    <div class="header">
+        <h2>Crear publicación</h2>
+    </div>
+    <div class="body">
+        <form class="m-4" [formGroup]="postForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <mat-label>Descripciòn: </mat-label>
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Descripción</mat-label>
+                        <textarea matInput placeholder="¿Que estas pensando?" formControlName="description"></textarea>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-file-container">
+                  <p class="mt-1"><span class="uppercase fw-500">Agregar imagen</span></p>
+                  <input-file formControlName="multipartFile" fileLimit="1" fileAccept="image/*"></input-file>  
+                </div>
+              </div>
+              
+            <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
+                    <button class="btn-space" mat-raised-button color="primary">Submit</button>
+                    <button type="button" mat-button>Cancel</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
