--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -128,71 +128,71 @@
 
 
 
-  <div class="content-block">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-9 col-xs-9">
-        <div class="card">
-          <div class="body">
-            <div class="wrapper">
-              <main class="main">
-                <div class="row">
-                  <div class="col-md-3">
-                    <mat-card class="example-card">
-                      <mat-card-header>
-                        <mat-card-title>Shiba Inu</mat-card-title>
-                        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                      </mat-card-header>
-                      <mat-card-content>
-                        <p>This card indeterminates progress bar.</p>
-                        <p>undo</p>
-                      </mat-card-content>
-                      <mat-card-actions>
-                        <button mat-button>LIKE</button>
-                        <button mat-button (click)="createPost()">Crear publicación</button>
-                      </mat-card-actions>
-                    </mat-card>
-                  </div>
+<div class="content-block">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-9 col-xs-9">
+      <div class="card">
+        <div class="body">
+          <div class="wrapper">
+            <main class="main">
+              <div class="row">
+                <div class="col-md-3">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                      <mat-card-title>Shiba Inu</mat-card-title>
+                      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <p>This card indeterminates progress bar.</p>
+                      <p>undo</p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                      <button mat-button>LIKE</button>
+                      <button mat-button (click)="createPost()">Crear publicación</button>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
 
-                  <div class="col-md-9">
-                    <mat-card class="example-card" *ngFor="let post of posts" [@pageTransition]>
-                      <mat-card-header>
-                        <div mat-card-avatar class="example-header-image"
-                          style="background-image:url('{{post.user.avatar}}')"></div>
-                        <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}
-                        </mat-card-title>
-                        <mat-card-subtitle>Fecha</mat-card-subtitle>
-                      </mat-card-header>
+                <div class="col-md-9 scrollClass" (scroll)="onScroll()">
+                  <mat-card class="example-card" *ngFor="let post of posts" [@pageTransition]>
+                    <mat-card-header>
+                      <div mat-card-avatar class="example-header-image"
+                        style="background-image:url('{{post.user.avatar}}')"></div>
+                      <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}
+                      </mat-card-title>
+                      <mat-card-subtitle>{{post.dateRegistration | date: 'dd-MMMM-yyyy'}}</mat-card-subtitle>
+                    </mat-card-header>
 
-                      <mat-card-content>
-                        <p class="postText">
-                          {{post.description}}
-                        </p>
-                      </mat-card-content>
+                    <mat-card-content>
+                      <p class="postText">
+                        {{post.description}}
+                      </p>
+                    </mat-card-content>
 
-                      <img mat-card-image m-1 src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
+                    <img mat-card-image m-1 class="imagenPost" *ngIf="post.multimedia && validaUrl(post.multimedia)"
+                      src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
 
-                      <mat-card-actions>
-                        <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
-                          <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
-                          LIKE
-                        </button>
+                    <mat-card-actions>
+                      <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
+                        <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
+                        LIKE
+                      </button>
 
-                        <button mat-button color="primary">
-                          <mat-icon>chat_bubble_outline</mat-icon>
-                          Comentarios
-                        </button>
-                      </mat-card-actions>
-                    </mat-card>
-
-                    <mat-paginator *ngIf="posts.length>0" showFirstLastButtons [length]="lengthPost"
-                      [pageSize]="pageSize" (page)="onPageChange($event)"></mat-paginator>
+                      <button mat-button color="primary">
+                        <mat-icon>chat_bubble_outline</mat-icon>
+                        Comentarios
+                      </button>
+                    </mat-card-actions>
+                  </mat-card>
+                  <div class="col spinner">
+                    <mat-spinner *ngIf="cargando"></mat-spinner>
                   </div>
                 </div>
-              </main>
-            </div>
+              </div>
+            </main>
           </div>
         </div>
       </div>
     </div>
   </div>
-
+</div>
