--- a/src/app/pages/home/header/header.component.scss
+++ b/src/app/pages/home/header/header.component.scss
@@ -21,4 +21,14 @@
   
   }
   
+  .circle {
+    width: 50px;
+    height: 50px;
+   
+    border-radius: 50%;
+    bottom: auto;
+    top: 5px;
+    right: 45px;
+    position:absolute;
+  }
   
