--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,19 @@
 
     }
   }
+
+
+  .full-screen-dialog-edit-user .mat-dialog-container{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    height: 720px;
+    width: 550px;
+  }
+  @media (max-width: 600px) {
+    .full-screen-dialog-edit-user .mat-dialog-container {
+      height: 100vh;
+      width: 100vw;
+      border-radius: 0px;
+
+    }
+  }
