--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -178,7 +178,7 @@
                         LIKE
                       </button>
 
-                      <button mat-button color="primary">
+                      <button mat-button color="primary" (click)="goComments(post)"  >
                         <mat-icon>chat_bubble_outline</mat-icon>
                         Comentarios
                       </button>
