--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -149,6 +149,7 @@
                     <mat-card-actions>
                       <button mat-button>LIKE</button>
                       <button mat-button (click)="createPost()">Crear publicación</button>
+                      <button mat-button routerLink="/home/bookface/myposts">Mis publicaciones</button>
                     </mat-card-actions>
                   </mat-card>
                 </div>
