--- a/src/app/pages/facebook/header/header.component.html
+++ b/src/app/pages/facebook/header/header.component.html
@@ -4,17 +4,13 @@
       <div class="navar conteiner text">
         <div class="card">
           <div class="col-md-12">
-            <div class="row inputF">
+            <div class="row mt-2">
               <div
                 class="input-container d-flex justify-content-center align-items-center"
               >
-                <input type="text" class="form-control" style="width: 400px" />
+                <input type="text" class="form-control inB" placeholder="Buscar"  />
                 <mat-icon matSuffix>search</mat-icon>
               </div>
-            </div>
-            <div class="d-flex justify-content-end">
-              <p class="Opciones">Publicaciones</p>
-              <p class="Opciones">Notificaciones de Bookface</p>
             </div>
           </div>
         </div>
