Finalizando funcionalida comentarios

--- a/src/app/pages/facebook/publications/comments/comments.component.scss
+++ b/src/app/pages/facebook/publications/comments/comments.component.scss
@@ -55,3 +55,12 @@
   }
   
   .grow1 { flex-grow: 1; }
+
+  .liked {
+    background-color: #3b5998 ;
+    color: white;
+  }
+
+  .derecha{ 
+    float: right;
+  }
