--- a/src/app/pages/facebook/publications/comments/comments.component.html
+++ b/src/app/pages/facebook/publications/comments/comments.component.html
@@ -35,7 +35,7 @@
       <img mat-card-image m-1 src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
       <mat-divider></mat-divider>
       <mat-card-actions>
-        <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
+        <button mat-button color="primary" [ngClass]="{'likedP': postLiked}" (click)="toggleLikePost()">
           <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
           LIKE
         </button>
@@ -63,15 +63,19 @@
     </mat-card>
     <h2 *ngIf="comments.length === 0" >No hay comentario, se el primero en comentar</h2>
     <mat-card class="example-card" *ngFor="let comment of comments">
-      <div class="derecha" *ngIf="comment.user.id == user.id">
+      <div class="derecha" *ngIf="comment.user.idUser == user.id_user">
         <button  mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
           <mat-icon>more_vert</mat-icon>
         </button>
-        <mat-menu #menu="matMenu"   >
+        <mat-menu #menu="matMenu" >
+          <button mat-menu-item (click)="toggleEditMode(comment)">
+            <mat-icon class="col-blue">cached</mat-icon>
+            <span>Editar</span>
+          </button>
           <button mat-menu-item (click)="deleteComment(comment)">
             <mat-icon class="col-red">delete</mat-icon>
             <span>Eliminar</span>
-          </button>
+          </button>         
         </mat-menu>
       </div>
       <mat-card-header>
@@ -80,11 +84,40 @@
         <mat-card-title> {{comment.user.name}} {{comment.user.fatherLastName}} {{comment.user.motherLastName}}</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        {{comment.descripcion}}
+        <ng-container *ngIf="!editingMode; else editMode">
+          {{ comment.descripcion }}
+        </ng-container>
+        <ng-template #editMode>
+          <mat-form-field>
+            <input matInput [(ngModel)]="editedDescription">
+          </mat-form-field>    
+          <div *ngIf="comment.multimedia">
+            <img mat-card-xl-image src="{{ comment?.multimedia }}" alt="Imagen del comentario">
+            <button class="derecha" mat-icon-button color="warn" (click)="removeImage(comment)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+          <div class="col">
+            <figure >
+              <img [src]="mostrarImagen2"  class="proyection-image" >
+            </figure>
+          </div>
+          <div *ngIf="!comment?.multimedia">
+            <label for ="upload" class="custom-file-upload">
+              <mat-icon for ="upload" class="icon">add_a_photo</mat-icon> 
+          </label>
+            <input id="upload" name="upload" type="file" (change)="uploadImageEditComment($event,comment);"
+            accept="image/png,image/jpeg,image/jpg"/>        
+          </div>  
+          <button class="derecha" mat-button (click)="cancelEdit()">Cancelar</button>
+          <button class="derecha" [disabled] = "editedDescription.length === 0" mat-button color="primary" (click)="updateComment(comment)">
+            <mat-icon>send</mat-icon>
+          </button>
+        </ng-template>
       </mat-card-content>
-      <img *ngIf="comment.multimedia" mat-card-xl-image src="{{comment?.multimedia}}" >
+      <img *ngIf="comment.multimedia && !editingMode" mat-card-xl-image src="{{comment?.multimedia}}" >
       <mat-card-actions>
-        <button mat-button (click)="likeComment(comment)">
+        <button mat-button  [ngClass]="{'liked': commentLikedMap[comment.id]}"  (click)="toggleLikeComment(comment)">
           <mat-icon class="col-blue"  >thumb_up_alt</mat-icon>
             Like {{comment.numLike}}
         </button>      
