--- a/src/app/pages/facebook/create-post/create-post.component.html
+++ b/src/app/pages/facebook/create-post/create-post.component.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
                     <button class="btn-space" mat-raised-button color="primary">Submit</button>
-                    <button type="button" mat-button>Cancel</button>
+                    <button type="button" mat-button (click)="close()">Cancel</button>
                 </div>
             </div>
         </form>
