--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -139,13 +139,8 @@
                 <div class="col-md-3">
                   <mat-card class="example-card">
                     <mat-card-header>
-                      <mat-card-title>Shiba Inu</mat-card-title>
-                      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                      <mat-card-title>{{data?.name}}</mat-card-title>
                     </mat-card-header>
-                    <mat-card-content>
-                      <p>This card indeterminates progress bar.</p>
-                      <p>undo</p>
-                    </mat-card-content>
                     <mat-card-actions>
                       <button mat-button>LIKE</button>
                       <button mat-button (click)="createPost()">Crear publicación</button>
@@ -154,7 +149,7 @@
                   </mat-card>
                 </div>
 
-                <div class="col-md-9 scrollClass" (scroll)="onScroll()">
+                <div class="col-md-6 scrollClass" (scroll)="onScroll()">
                   <mat-card class="example-card" *ngFor="let post of posts" [@pageTransition]>
                     <mat-card-header>
                       <div mat-card-avatar class="example-header-image"
@@ -189,6 +184,11 @@
                     <mat-spinner *ngIf="cargando"></mat-spinner>
                   </div>
                 </div>
+
+                <div class="col-md-3">
+
+                </div>
+
               </div>
             </main>
           </div>
