--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,19 @@
 
     }
   }
+
+  @media (max-width: 600px) {
+    .full-screen-dialog-comentarios .mat-dialog-container {
+      height: 100vh;
+      width: 100vw;
+      border-radius: 0px;
+
+    }
+  }
+  .full-screen-dialog-comentarios .full-screen-dialog{
+
+   background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    height: 990px;
+    width: 700px;
+  }
