--- a/src/app/pages/facebook/publications/comments/comments.component.html
+++ b/src/app/pages/facebook/publications/comments/comments.component.html
@@ -1,73 +1,73 @@
-<section >
-  <div class="container">
-    <div class="row">
-      <div class="col">
-
-      </div>
-      <div class="col">
-        <h2 class="text-center">Publicación de {{post.user.name}} {{post.user?.fatherLastName}} {{post.user?.motherLastName}}</h2>  
-      </div>
-      <div class="col text-end">
-        <button mat-button class="icono-gris" color="primary" (click)="closeCommentDialog()"> 
-          <mat-icon>close</mat-icon>           
-        </button>
-      </div>    
+<div mat-dialog-title>
+  <div class="row">
+    <div class="col">
+      Publicación de {{ post.user.name }}
+      {{ post.user?.fatherLastName }}
+      {{ post.user?.motherLastName }}
+    </div>
+    <div class="col text-end">
+      <button mat-mini-fab color="link" (click)="closeCommentDialog()">
+        <mat-icon>close</mat-icon>
+      </button>
     </div>
   </div>
-</section>
-<mat-dialog-content>
-<mat-divider></mat-divider>
-<div class="col-md-12 col-lg-12 col-xs-12">
-     <mat-card class="example-card" [@pageTransition]>
+</div>
+<mat-dialog-content class="mat-typography" style="height: 80%">
+  <div class="col-md-12 col-lg-12 col-xs-12">
+    <mat-card class="example-card" [@pageTransition]>
       <mat-card-header>
-        <div mat-card-avatar class="example-header-image"
-          style="background-image:url('{{post.user.avatar}}')"></div>
-        <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}
+        <div
+          mat-card-avatar
+          class="example-header-image"
+          style="background-image:url('{{ post.user.avatar }}')"
+        ></div>
+        <mat-card-title
+          >{{ post.user.name }} {{ post.user.fatherLastName }}
+          {{ post.user.motherLastName }}
         </mat-card-title>
         <mat-card-subtitle>Fecha</mat-card-subtitle>
       </mat-card-header>
 
       <mat-card-content>
         <p class="postText">
-          {{post.description}}
+          {{ post.description }}
         </p>
       </mat-card-content>
-      <img mat-card-image m-1 src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
+      <img
+        mat-card-image
+        m-1
+        src="{{ post.multimedia }}"
+        alt="No se puede visualizar la imagen"
+      />
       <mat-divider></mat-divider>
       <mat-card-actions>
-        <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
-          <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
+        <button
+          mat-button
+          color="primary"
+          [ngClass]="{ liked: postLiked }"
+          (click)="toggleLike()"
+        >
+          <mat-icon matBadge="{{ post.numLike }}">thumb_up_off_alt</mat-icon>
           LIKE
         </button>
 
-        <!-- <button mat-button color="primary" (click)="goComments(post)"  >
-          <mat-icon>chat_bubble_outline</mat-icon>
-          Comentarios
-        </button> -->
-        <!-- <mat-accordion   multi > -->
-          
-        <!-- </mat-accordion> -->
+        
       </mat-card-actions>
       <mat-divider></mat-divider>
-      <!-- <form class="example-form">
-        <mat-form-field class="example-full-width">
-          <mat-label>Favorite food</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-      
-        <mat-form-field class="example-full-width">
-          <mat-label>Leave a comment</mat-label>
-          <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-        </mat-form-field>
-      </form> -->
     </mat-card>
-    <h2 *ngIf="comments.length === 0" >No hay comentario, se el primero en comentar</h2>
+    <h2 *ngIf="comments.length === 0">
+      No hay comentario, se el primero en comentar
+    </h2>
     <mat-card class="example-card" *ngFor="let comment of comments">
       <div class="derecha" *ngIf="comment.user.id == user.id">
-        <button  mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu"
+        >
           <mat-icon>more_vert</mat-icon>
         </button>
-        <mat-menu #menu="matMenu"   >
+        <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="deleteComment(comment)">
             <mat-icon class="col-red">delete</mat-icon>
             <span>Eliminar</span>
@@ -75,73 +75,87 @@
         </mat-menu>
       </div>
       <mat-card-header>
-        <div mat-card-avatar class="example-header-image" [style.background-image]="'url(' + comment.user.avatar + ')'" >
-        </div>
-        <mat-card-title> {{comment.user.name}} {{comment.user.fatherLastName}} {{comment.user.motherLastName}}</mat-card-title>
+        <div
+          mat-card-avatar
+          class="example-header-image" 
+          [style.background-image]="'url(' + comment.user.avatar + ')'"
+        ></div>
+        <mat-card-title>
+          {{ comment.user.name }} {{ comment.user.fatherLastName }}
+          {{ comment.user.motherLastName }}</mat-card-title
+        >
       </mat-card-header>
       <mat-card-content>
-        {{comment.descripcion}}
+        {{ comment.descripcion }}
       </mat-card-content>
-      <img *ngIf="comment.multimedia" mat-card-xl-image src="{{comment?.multimedia}}" >
+      <div class=" d-flex justify-content-center align-items-center" >
+        <img style="border-radius: 10pt;"
+        *ngIf="comment.multimedia"
+        mat-card-xl-image
+        src="{{ comment?.multimedia }}"
+      />
+      </div>
+      
       <mat-card-actions>
         <button mat-button (click)="likeComment(comment)">
-          <mat-icon class="col-blue"  >thumb_up_alt</mat-icon>
-            Like {{comment.numLike}}
-        </button>      
+          <mat-icon class="col-blue">thumb_up_alt</mat-icon>
+          Like {{ comment.numLike }}
+        </button>
       </mat-card-actions>
       <mat-divider></mat-divider>
-    </mat-card>    
-</div>    
+    </mat-card>
+  </div>
 </mat-dialog-content>
-<mat-card class="example-card">
-  <mat-card-header>
-    <!-- <mat-card-title>{{user.name}} {{user.father_last_name}} {{user.father_last_name}}</mat-card-title> -->
-    <form class="example-form" [formGroup] = "formComment" >
-      <div mat-card-avatar class="example-header-image " [style.background-image]="'url(' + user.avatar + ')'"></div>
-      <section class="layout">
-
-        <div class="grow1"> 
-          <mat-form-field  appearance="outline" class="example-full-width" >
-            <input formControlName = "descripcion" matInput placeholder="Escribe un comentario..." maxlength="250">           
-          </mat-form-field> 
-        </div>
-        <div class="grow1"> 
-          <button [disabled]="!formComment.controls.img.value && !formComment.controls.descripcion.value" mat-button (click)="saveComment()"  >
-            <mat-icon>
-                send
-            </mat-icon>
-          </button>     
-        </div>        
-      </section>
-        <div *ngIf="!formComment.controls.img.value">
-          <label for ="upload" class="custom-file-upload">
-            <mat-icon for ="upload" class="icon">add_a_photo</mat-icon> 
-        </label>
-          <input id="upload" name="upload" type="file" (change)="uploadImage($event);"
-          accept="image/png,image/jpeg,image/jpg"/>        
-        </div> 
-                         
-    </form>
-  </mat-card-header>
-
-
+<mat-dialog-actions style="width: 95%;">
+  <form class="example-form" [formGroup]="formComment">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div
+        mat-card-avatar
+        class="example-header-image col-1"
+        [style.background-image]="'url(' + user.avatar + ')'"
+      ></div>
+      <div class="col">
+        <mat-form-field appearance="outline" class="inpCom">
+          <input matInput formControlName="descripcion" placeholder="Type your comment here" />
+        </mat-form-field>
+      </div>
+      <div class="col-1">
+        <button
+          [disabled]="!formComment.controls.img.value && !formComment.controls.descripcion.value"
+          mat-button
+          (click)="saveComment()"
+        >
+          <mat-icon>send</mat-icon>
+        </button>
+      </div>
+    </div>
+    <div class="col-1">
+      <label for="upload" class="custom-file-upload">
+        <mat-icon for="upload" class="icon">add_a_photo</mat-icon>
+      </label>
+      <input
+        id="upload"
+        name="upload"
+        type="file"
+        (change)="uploadImage($event)"
+        accept="image/png,image/jpeg,image/jpg"
+      />
+    </div>
+  </form>
   <div class="container">
     <div class="row">
       <div class="col">
-        <figure >
-          <img [src]="mostrarImagen"  class="proyection-image" >
+        <figure *ngIf="mostrarImagen">
+          <img [src]="mostrarImagen" class="proyection-image" />
         </figure>
       </div>
-      <div class="col">
-
-      </div>
-      <div *ngIf="mostrarImagen"  class="col text-end">
-        <button mat-button class="icono-gris" color="primary" (click)="deleteImage()"> 
-          <mat-icon>close</mat-icon>           
+      <div class="col"></div>
+      <div *ngIf="mostrarImagen" class="col text-end">
+        <button mat-mini-fab color="link" (click)="deleteImage()">
+          <mat-icon>close</mat-icon>
         </button>
-      </div>    
+      </div>
     </div>
-  </div>   
-</mat-card>
+  </div>
+</mat-dialog-actions>
 
- 
