--- a/src/app/pages/facebook/publications/comments/comments.component.scss
+++ b/src/app/pages/facebook/publications/comments/comments.component.scss
@@ -18,8 +18,6 @@
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
-    background-color: #3b5998 ;
-    color: #fff;
     border-radius: 10px;
 }
 
@@ -43,7 +41,11 @@
     z-index: -1;
   }
   
-  
+  .inpCom{
+    width: 100%;
+    border: 0px;
+    margin-top: 10px;
+  }
   .layout {
     width: 100%;
   
