Agregando la funcionalidad de likes

--- a/src/app/pages/home/header/header.component.html
+++ b/src/app/pages/home/header/header.component.html
@@ -31,7 +31,7 @@
             style="margin-top: -15px; cursor: pointer"
           >
             <img src="assets/images/media.png" />
-            <span class="logo-name text" style="color: black">Socila hub</span>
+            <span class="logo-name text" style="color: black">Social hub</span>
           </div>
         </div>
       </a>
