--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -142,7 +142,6 @@
                       <mat-card-title>{{data?.name}}</mat-card-title>
                     </mat-card-header>
                     <mat-card-actions>
-                      <button mat-button>LIKE</button>
                       <button mat-button (click)="createPost()">Crear publicación</button>
                       <button mat-button routerLink="/home/bookface/myposts">Mis publicaciones</button>
                     </mat-card-actions>
@@ -169,7 +168,7 @@
                       src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
 
                     <mat-card-actions>
-                      <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
+                      <button mat-button color="primary" [ngClass]="{'liked': post.liked}" (click)="toggleLike(post)">
                         <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
                         LIKE
                       </button>
