--- a/src/app/pages/facebook/publications/comments/comments.component.html
+++ b/src/app/pages/facebook/publications/comments/comments.component.html
@@ -1,178 +1,202 @@
-<div mat-dialog-title>
-  <div class="row">
-    <div class="col">
-      Publicación de {{ post.user.name }}
-      {{ post.user?.fatherLastName }}
-      {{ post.user?.motherLastName }}
-    </div>
-    <div class="col text-end">
-      <button mat-mini-fab color="link" (click)="closeCommentDialog()">
-        <mat-icon>close</mat-icon>
-      </button>
-    </div>
-  </div>
-</div>
-<mat-dialog-content class="mat-typography" style="height: 80%">
-  <div class="col-md-12 col-lg-12 col-xs-12">
-    <mat-card class="example-card" [@pageTransition]>
-      <mat-card-header>
-        <div
-          mat-card-avatar
-          class="example-header-image"
-          style="background-image:url('{{ post.user.avatar }}')"
-        ></div>
-        <mat-card-title
-          >{{ post.user.name }} {{ post.user.fatherLastName }}
-          {{ post.user.motherLastName }}
-        </mat-card-title>
-        <mat-card-subtitle>Fecha</mat-card-subtitle>
-      </mat-card-header>
-
-      <mat-card-content>
-        <p class="postText">
-          {{ post.description }}
-        </p>
-      </mat-card-content>
-      <img
-        mat-card-image
-        m-1
-        src="{{ post.multimedia }}"
-        alt="No se puede visualizar la imagen"
-      />
-      <mat-divider></mat-divider>
-      <mat-card-actions>
-        <button mat-button color="primary" [ngClass]="{'likedP': postLiked}" (click)="toggleLikePost()">
-          <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
-          LIKE
-        </button>
-
-        
-      </mat-card-actions>
-      <mat-divider></mat-divider>
-    </mat-card>
-    <h2 *ngIf="comments.length === 0">
-      No hay comentario, se el primero en comentar
-    </h2>
-    <mat-card class="example-card" *ngFor="let comment of comments">
-      <div class="derecha" *ngIf="comment.user.idUser == user.id_user">
-        <button  mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu" >
-          <button mat-menu-item (click)="toggleEditMode(comment)">
-            <mat-icon class="col-blue">cached</mat-icon>
-            <span>Editar</span>
-          </button>
-          <button mat-menu-item (click)="deleteComment(comment)">
-            <mat-icon class="col-red">delete</mat-icon>
-            <span>Eliminar</span>
-          </button>         
-        </mat-menu>
+<div style="width: 95%;">
+  <div mat-dialog-title>
+    <div class="row text">
+      <div class="col justify-content-center d-flex align-items-center">
+        Publicación de {{ post.user.name }}
+        {{ post.user?.fatherLastName }}
+        {{ post.user?.motherLastName }}
       </div>
-      <mat-card-header>
-        <div
-          mat-card-avatar
-          class="example-header-image" 
-          [style.background-image]="'url(' + comment.user.avatar + ')'"
-        ></div>
-        <mat-card-title>
-          {{ comment.user.name }} {{ comment.user.fatherLastName }}
-          {{ comment.user.motherLastName }}</mat-card-title
-        >
-      </mat-card-header>
-      <mat-card-content>
-        <ng-container *ngIf="!editingMode; else editMode">
-          {{ comment.descripcion }}
-        </ng-container>
-        <ng-template #editMode>
-          <mat-form-field>
-            <input matInput [(ngModel)]="editedDescription">
-          </mat-form-field>    
-          <div *ngIf="comment.multimedia">
-            <img mat-card-xl-image src="{{ comment?.multimedia }}" alt="Imagen del comentario">
-            <button class="derecha" mat-icon-button color="warn" (click)="removeImage(comment)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </div>
-          <div class="col">
-            <figure >
-              <img [src]="mostrarImagen2"  class="proyection-image" >
-            </figure>
-          </div>
-          <div *ngIf="!comment?.multimedia">
-            <label for ="upload" class="custom-file-upload">
-              <mat-icon for ="upload" class="icon">add_a_photo</mat-icon> 
-          </label>
-            <input id="upload" name="upload" type="file" (change)="uploadImageEditComment($event,comment);"
-            accept="image/png,image/jpeg,image/jpg"/>        
-          </div>  
-          <button class="derecha" mat-button (click)="cancelEdit()">Cancelar</button>
-          <button class="derecha" [disabled] = "editedDescription.length === 0" mat-button color="primary" (click)="updateComment(comment)">
-            <mat-icon>send</mat-icon>
-          </button>
-        </ng-template>
-      </mat-card-content>
-      <img *ngIf="comment.multimedia && !editingMode" mat-card-xl-image src="{{comment?.multimedia}}" >
-      <mat-card-actions>
-        <button mat-button  [ngClass]="{'liked': commentLikedMap[comment.id]}"  (click)="toggleLikeComment(comment)">
-          <mat-icon class="col-blue"  >thumb_up_alt</mat-icon>
-            Like {{comment.numLike}}
-        </button>      
-      </mat-card-actions>
-      <mat-divider></mat-divider>
-    </mat-card>
-  </div>
-</mat-dialog-content>
-<mat-dialog-actions style="width: 95%;">
-  <form class="example-form" [formGroup]="formComment">
-    <div class="row d-flex justify-content-center align-items-center">
-      <div
-        mat-card-avatar
-        class="example-header-image col-1"
-        [style.background-image]="'url(' + user.avatar + ')'"
-      ></div>
-      <div class="col">
-        <mat-form-field appearance="outline" class="inpCom">
-          <input matInput formControlName="descripcion" placeholder="Type your comment here" />
-        </mat-form-field>
-      </div>
-      <div class="col-1">
-        <button
-          [disabled]="!formComment.controls.img.value && !formComment.controls.descripcion.value"
-          mat-button
-          (click)="saveComment()"
-        >
-          <mat-icon>send</mat-icon>
-        </button>
-      </div>
-    </div>
-    <div class="col-1">
-      <label for="upload" class="custom-file-upload">
-        <mat-icon for="upload" class="icon">add_a_photo</mat-icon>
-      </label>
-      <input
-        id="upload"
-        name="upload"
-        type="file"
-        (change)="uploadImage($event)"
-        accept="image/png,image/jpeg,image/jpg"
-      />
-    </div>
-  </form>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <figure *ngIf="mostrarImagen">
-          <img [src]="mostrarImagen" class="proyection-image" />
-        </figure>
-      </div>
-      <div class="col"></div>
-      <div *ngIf="mostrarImagen" class="col text-end">
-        <button mat-mini-fab color="link" (click)="deleteImage()">
+      <div class="col-1 text-end">
+        <button mat-mini-fab color="link" (click)="closeCommentDialog()">
           <mat-icon>close</mat-icon>
         </button>
       </div>
     </div>
   </div>
-</mat-dialog-actions>
-
+  <mat-dialog-content class="mat-typography text">
+    <div class="col-md-12 col-lg-12 col-xs-12">
+      <h2 *ngIf="comments.length === 0">
+        No hay comentario, se el primero en comentar
+      </h2>
+      <mat-card class="example-card" *ngFor="let comment of comments">
+        <div class="derecha" *ngIf="comment.user.idUser == user.id_user">
+          <button
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Example icon-button with a menu"
+          >
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="toggleEditMode(comment)">
+              <mat-icon class="col-blue">cached</mat-icon>
+              <span>Editar</span>
+            </button>
+            <button mat-menu-item (click)="deleteComment(comment)">
+              <mat-icon class="col-red">delete</mat-icon>
+              <span>Eliminar</span>
+            </button>
+          </mat-menu>
+        </div>
+        <mat-card-header>
+          <div
+            mat-card-avatar
+            class="example-header-image"
+            [style.background-image]="'url(' + comment.user.avatar + ')'"
+          ></div>
+          <div >
+            <div class="text1 text-truncate">
+             {{ comment.user.name }} {{ comment.user.fatherLastName }}
+            {{ comment.user.motherLastName }}
+            </div>
+            <div>
+              {{comment.user.dateRegistration}}
+            </div>
+          </div>
+          
+        </mat-card-header>
+        <mat-card-content>
+          <ng-container *ngIf="!editingMode; else editMode">
+            {{ comment.descripcion }}
+          </ng-container>
+          <ng-template #editMode>
+            <mat-form-field>
+              <input matInput [(ngModel)]="editedDescription" />
+            </mat-form-field>
+            <div *ngIf="comment.multimedia">
+              <div>
+                <img
+                  mat-card-xl-image
+                  src="{{ comment?.multimedia }}"
+                  alt="Imagen del comentario"
+                />
+              </div>
+  
+              <button
+                class="derecha"
+                mat-icon-button
+                color="warn"
+                (click)="removeImage(comment)"
+              >
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+            <div class="col">
+              <figure>
+                <img [src]="mostrarImagen2" class="proyection-image" />
+              </figure>
+            </div>
+            <div *ngIf="!comment?.multimedia">
+              <label for="upload" class="custom-file-upload">
+                <mat-icon for="upload" class="icon">add_a_photo</mat-icon>
+              </label>
+              <input
+                id="upload"
+                name="upload"
+                type="file"
+                (change)="uploadImageEditComment($event, comment)"
+                accept="image/png,image/jpeg,image/jpg"
+              />
+            </div>
+            <button class="derecha" mat-button (click)="cancelEdit()">
+              Cancelar
+            </button>
+            <button
+              class="derecha"
+              [disabled]="editedDescription.length === 0"
+              mat-button
+              color="primary"
+              (click)="updateComment(comment)"
+            >
+              <mat-icon>send</mat-icon>
+            </button>
+          </ng-template>
+        </mat-card-content>
+        <div class="text-center">
+          <img
+            style="border-radius: 10pt"
+            *ngIf="comment.multimedia && !editingMode"
+            mat-card-xl-image
+            src="{{ comment?.multimedia }}"
+          />
+        </div>
+  
+        <mat-card-actions>
+          <button
+            mat-button
+            [ngClass]="{ liked: commentLikedMap[comment.id] }"
+            (click)="toggleLikeComment(comment)"
+          >
+            <mat-icon class="col-blue">thumb_up_alt</mat-icon>
+            Like {{ comment.numLike }}
+          </button>
+        </mat-card-actions>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions >
+    <form class="example-form" [formGroup]="formComment">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div
+          mat-card-avatar
+          class="example-header-image col-1"
+          [style.background-image]="'url(' + user.avatar + ')'"
+        ></div>
+  
+        <div class="col">
+          <mat-form-field appearance="outline" class="inpCom">
+            <textarea
+              matInput
+              type="text-area"
+              formControlName="descripcion"
+              placeholder="Escrive tu comentario"
+              rows="3"
+            ></textarea>
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <figure *ngIf="mostrarImagen">
+                    <img [src]="mostrarImagen" class="proyection-image" />
+                  </figure>
+                </div>
+                <div class="col"></div>
+                <div *ngIf="mostrarImagen" class="col text-end">
+                  <button mat-mini-fab color="link" (click)="deleteImage()">
+                    <mat-icon>close</mat-icon>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="justify-content-end align-items-center d-flex">
+              <span>
+                <button
+                  [disabled]="
+                    !formComment.controls.img.value &&
+                    !formComment.controls.descripcion.value
+                  "
+                  mat-button
+                  (click)="saveComment()"
+                >
+                  <mat-icon>send</mat-icon>
+                </button>
+              </span>
+  
+              <label for="upload" class="custom-file-upload">
+                <mat-icon for="upload" class="icon">add_a_photo</mat-icon>
+              </label>
+              <input
+                id="upload"
+                name="upload"
+                type="file"
+                (change)="uploadImage($event)"
+                accept="image/png,image/jpeg,image/jpg"
+              />
+            </div>
+          </mat-form-field>
+        </div>
+      </div>
+    </form>
+  </mat-dialog-actions>
+  
+</div>
