--- a/src/app/pages/facebook/header/header.component.html
+++ b/src/app/pages/facebook/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="content-block">
+<!-- <div class="content-block">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-9 col-xs-9">
       <div class="navar conteiner text">
@@ -17,4 +17,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
