--- a/src/app/pages/facebook/my-publications/my-publications.component.html
+++ b/src/app/pages/facebook/my-publications/my-publications.component.html
@@ -1,5 +1,83 @@
-<div class="ms-2" >
-    <button routerLink="/home/bookface/public" mat-mini-fab color="link">
-      <mat-icon>arrow_back</mat-icon>
-    </button>
+  <div class="content-block" >
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-9 col-xs-9" >
+        <div class="card">
+          <div class="body">
+            <div class="wrapper">
+              <main class="main">
+                <div class="row">
+                  <div class="col-md-3">
+                    <mat-card class="example-card actions">
+                      <mat-card-header>
+                        <mat-card-title>{{data?.name}}</mat-card-title>
+                      </mat-card-header>
+                      <p class="ms-4" style="color: blue;">Mis publicaciones</p>
+                      <mat-card-actions>
+                        <button mat-button (click)="createPost()">Crear publicación</button>
+                        <button mat-button routerLink="/home/bookface">Ver publicaciones</button>
+                      </mat-card-actions>
+                    </mat-card>
+                  </div>
+  
+                  <div class="col-md-6 scrollClass" (scroll)="onScroll()">
+                    <mat-card class="example-card" *ngFor="let post of posts" [@pageTransition]>
+                      <mat-card-header>
+                        <div mat-card-avatar class="example-header-image"
+                          style="background-image:url('{{post.user.avatar}}')"></div>
+                        <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}<button [matMenuTriggerFor]="menu"  mat-icon-button color="link">
+                          <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu">
+                          <button mat-menu-item (click)="editPost(post.idPost)">
+                            <mat-icon>edit</mat-icon>
+                            <span>Editar</span>
+                          </button>
+                          
+                          <button mat-menu-item (click)="deletePost(post.idPost)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Eliminar</span>
+                          </button>
+                        </mat-menu>
+                          
+                        </mat-card-title>
+                        <mat-card-subtitle>{{post.dateRegistration | date: 'dd-MMMM-yyyy'}}</mat-card-subtitle>
+                      </mat-card-header>
+  
+                      <mat-card-content>
+                        <p class="postText">
+                          {{post.description}}
+                        </p>
+                      </mat-card-content>
+  
+                      <img mat-card-image m-1 class="imagenPost" *ngIf="post.multimedia && validaUrl(post.multimedia)"
+                        src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
+  
+                      <mat-card-actions>
+                        <button mat-button color="primary" [ngClass]="{'liked': post.liked}" disabled>
+                          <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
+                          LIKE
+                        </button>
+  
+                        <button mat-button color="primary" (click)="goComments(post)"  >
+                          <mat-icon>chat_bubble_outline</mat-icon>
+                          Comentarios
+                        </button>
+                      </mat-card-actions>
+                    </mat-card>
+                    <div class="col spinner">
+                      <mat-spinner *ngIf="cargando"></mat-spinner>
+                    </div>
+                  </div>
+  
+                  <div class="col-md-3">
+  
+                  </div>
+  
+                </div>
+              </main>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
