--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -1,132 +1,3 @@
-<!-- <div class="container text">
-  <div
-    class="d-flex justify-content-center align-items-center"
-    style="margin-top: 20px"
-  >
-    <div class="conBookface">
-      <div class="row margen10">
-        <div class="col-1" style="margin-top: 5px">
-          <img src="{{post.user.avatar}}" class="user_img" />
-        </div>
-        <div class="col align-items-center">
-          <div>{{post.user.name}}</div>
-          <div>1 h</div>
-        </div>
-      </div>
-      <div class="margen10">{{post.description}}</div>
-      <div class="margen20">
-        <div class="conImgPub">
-          <img src="{{post.multimedia}}" class="rounded d-block imOrVideoP" />
-        </div>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col d-flex align-items-center justify-content-center">
-          <mat-icon matBadge="{{post.numLike}}"><span class="material-icons-outlined">thumb_up_off_alt</span></mat-icon>
-        </div>
-        <div (click)="activateComments()" class="col d-flex align-items-center justify-content-center">
-          <mat-icon><span class="material-icons-outlined">
-              chat_bubble_outline
-            </span></mat-icon>
-          Comentarios
-        </div>
-      </div>
-      <div [hidden]="seeComments">
-        <hr />
-        <div class="row">
-          <div class="col">
-            <div class="row">
-              <div class="col d-flex align-items-center justify-content-center">
-                <mat-icon><span class="material-icons-outlined">
-                    thumb_up_off_alt
-                  </span></mat-icon>
-                2k
-              </div>
-              <div class="col d-flex align-items-center">
-                <mat-icon><span class="material-icons-outlined">
-                    chat_bubble_outline
-                  </span></mat-icon>
-                3k
-              </div>
-            </div>
-          </div>
-          <div class="col d-flex justify-content-end margenLef10">
-            <p>Mas reciente</p>
-          </div>
-        </div>
-        <div>
-          <div class="row margenLef20">
-            <div class="col-1">
-              <img src="" class="user_img" />
-            </div>
-            <div class="col">
-              <p>David Enrique Lopez Juarez</p>
-              <p>Comentarios</p>
-              <div class="row">
-                <div class="col">
-                  <div class="row">
-                    <div class="col d-flex align-items-center justify-content-center">
-                      <mat-icon><span class="material-icons-outlined">
-                          thumb_up_off_alt
-                        </span></mat-icon>
-                      2k
-                    </div>
-                    <div (click)="activateSubComments()" class="col d-flex align-items-center">
-                      <mat-icon><span class="material-icons-outlined">
-                          chat_bubble_outline
-                        </span></mat-icon>
-                      3k
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <p>12 de junio del 2023</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div [hidden]="subComments" class="margenLef20">
-            <div class="row margenLef20">
-              <div class="col-1">
-                <img src="" class="user_img" />
-              </div>
-              <div class="col">
-                <p>David Enrique Lopez Juarez</p>
-                <p>Comentarios</p>
-                <div class="row">
-                  <div class="col">
-                    <div class="row">
-                      <div class="col d-flex align-items-center">
-                        <mat-icon><span class="material-icons-outlined">
-                            thumb_up_off_alt
-                          </span></mat-icon>
-                        2k
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <p>12 de junio del 2023</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row margen10">
-          <div class="col-1 align-items-center">
-            <img src="" class="user_img imgCom" />
-          </div>
-          <div class="col d-flex align-items-center">
-            <input type="text" class="form-control inputCom" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>  -->
-
-
-
 
 <div class="content-block">
   <div class="row">
@@ -140,7 +11,9 @@
                   <mat-card class="example-card">
                     <mat-card-header>
                       <mat-card-title>{{data?.name}}</mat-card-title>
+                      
                     </mat-card-header>
+                    <p class="ms-4" style="color: blue;">Publicaciones</p>
                     <mat-card-actions>
                       <button mat-button (click)="createPost()">Crear publicación</button>
                       <button mat-button routerLink="/home/bookface/myposts">Mis publicaciones</button>
