--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,10 +40,16 @@
     width: 650px;
   }
   @media (max-width: 600px) {
-    .full-screen-dialog-coments .mat-dialog-container {
+    .full-screen-dialog-coments  .mat-dialog-container {
       height: 100vh;
       width: 100vw;
       border-radius: 0px;
     }
+  }
+  .full-screen-dialog-create-post .mat-dialog-container {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    height: 550px;
+    width: 650px;
   }
 
