--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,55 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
-.text{
-    font-family: Microsoft PhagsPa;
+.text {
+  font-family: Microsoft PhagsPa;
 }
 .full-screen-dialog .mat-dialog-container {
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    height: 60%;
-    width: 450px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  height: 60%;
+  width: 450px;
+}
+@media (max-width: 600px) {
+  .full-screen-dialog .mat-dialog-container {
+    height: 100%;
+    width: 100vw;
   }
-  @media (max-width: 600px) {
-    .full-screen-dialog .mat-dialog-container {
-      height: 100%;
-      width: 100vw;
+}
 
-    }
+.full-screen-dialog-edit-user .mat-dialog-container {
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  height: 720px;
+  width: 550px;
+}
+@media (max-width: 600px) {
+  .full-screen-dialog-edit-user .mat-dialog-container {
+    height: 100vh;
+    width: 100vw;
+    border-radius: 0px;
   }
+}
 
-
-  .full-screen-dialog-edit-user .mat-dialog-container{
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    height: 720px;
-    width: 550px;
-  }
-  @media (max-width: 600px) {
-    .full-screen-dialog-edit-user .mat-dialog-container {
-      height: 100vh;
-      width: 100vw;
-      border-radius: 0px;
-
-    }
-  }
-
-
+.full-screen-dialog-coments .mat-dialog-container {
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  height: 900px;
+  width: 650px;
+}
+@media (max-width: 600px) {
   .full-screen-dialog-coments .mat-dialog-container {
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    height: 900px;
-    width: 650px;
+    height: 100vh;
+    width: 100vw;
+    border-radius: 0px;
   }
-  @media (max-width: 600px) {
-    .full-screen-dialog-coments  .mat-dialog-container {
-      height: 100vh;
-      width: 100vw;
-      border-radius: 0px;
-    }
-  }
-  .full-screen-dialog-create-post .mat-dialog-container {
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    height: 550px;
-    width: 650px;
-  }
+}
+.full-screen-dialog-create-post .mat-dialog-container {
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  height: 550px;
+  width: 650px;
+}
+.full-screen-dialog-comment-tokTik .mat-dialog-container {
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  height: 550px;
+  width: 40vh;
+  position: fixed;
+  bottom: 20px; /* Alinea el borde inferior del diálogo al centro vertical */
+  right: 41.05vw;
+}
 
+@media (max-width: 600px) {
+  .full-screen-dialog-comment-tokTik .mat-dialog-container {
+    height: 50vh;
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
+    right: 0vw;
+    left: 0vw;
+  }
+}
