Diseño del Maketado de toktik

--- a/src/app/pages/tiktok/publications/publications.component.html
+++ b/src/app/pages/tiktok/publications/publications.component.html
@@ -1,8 +1,12 @@
-<div class="container justify-content-center align-items-center text">
+
+<div class="container justify-content-center align-items-center text"  >
   <div class="row">
-    <div class="col">
+    
+    <div class="col ">
       <div>
-        <div class="card-header">se agrega el avatar y datos del usuario</div>
+        <div class="datU">
+          users data!!!
+        </div>
         <div class="card-body">
           <div class="row">
             <div class="col d-flex justify-content-center align-items-center">
@@ -13,7 +17,7 @@
                 <source src="ruta_del_video.ogv" type="video/ogg" />
                 Tu navegador no admite la etiqueta de video.
               </video>
-              <div  class="ms-2 actions">
+              <div class="ms-2 actions">
                 <div class="text-center">
                   <button mat-mini-fab color="link">
                     <mat-icon
@@ -27,7 +31,12 @@
                   <p>12k</p>
                 </div>
                 <div class="text-center">
-                  <button class="mt-2" mat-mini-fab color="link" (click)="comenOpen()">
+                  <button
+                    class="mt-2"
+                    mat-mini-fab
+                    color="link"
+                    (click)="comenOpen()"
+                  >
                     <mat-icon
                       matBadge="4"
                       matBadgeOverlap="false"
@@ -39,7 +48,55 @@
                   <p>12k</p>
                 </div>
               </div>
-              
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="datU">
+          users data!!!
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col d-flex justify-content-center align-items-center">
+              <video controls class="video">
+                <!-- <source src="ruta_del_video.mp4" type="video/mp4" /> -->
+                <!-- También puedes agregar formatos de video adicionales como WebM o Ogg -->
+                <!-- <source src="ruta_del_video.webm" type="video/webm"> -->
+                <source src="ruta_del_video.ogv" type="video/ogg" />
+                Tu navegador no admite la etiqueta de video.
+              </video>
+              <div class="ms-2 actions">
+                <div class="text-center">
+                  <button mat-mini-fab color="link">
+                    <mat-icon
+                      matBadge="4"
+                      matBadgeOverlap="false"
+                      matBadgeColor="warn"
+                    >
+                      favorite
+                    </mat-icon>
+                  </button>
+                  <p>12k</p>
+                </div>
+                <div class="text-center">
+                  <button
+                    class="mt-2"
+                    mat-mini-fab
+                    color="link"
+                    (click)="comenOpen()"
+                  >
+                    <mat-icon
+                      matBadge="4"
+                      matBadgeOverlap="false"
+                      matBadgeColor="warn"
+                    >
+                      textsms
+                    </mat-icon>
+                  </button>
+                  <p>12k</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
