--- a/src/app/pages/tiktok/publications/publications.component.scss
+++ b/src/app/pages/tiktok/publications/publications.component.scss
@@ -15,13 +15,21 @@
 
 @media (max-width: 530px) {
   .actions{
-   position: fixed;
+   position: absolute;
    right: 45px;
    color: white;
   }
 
   .video{
     width: 90vw;
-  height: 80vh
+    height: 70vh
   }
+  .datU{
+    margin-top: 20px;
+    margin-left: 30px;
+    color: white;
+    position: absolute;
+    z-index: 9999;
+  }
+  
 }
