--- a/src/app/pages/tiktok/publications/publications.component.scss
+++ b/src/app/pages/tiktok/publications/publications.component.scss
@@ -2,8 +2,8 @@
   background-size: cover;
 }
 .video{
-  width: 40vh;
-  height: 68vh;
+  width: 48vh;
+  height: 85vh;
   border-radius: 10pt;
 }
 
@@ -32,4 +32,35 @@
     z-index: 9999;
   }
   
+}
+
+.liked {
+  background-color: rgb(255, 0, 200);
+  color: white;
+}
+
+/* Estilos para los botones de carga de video */
+.custom-button.next {
+  position: fixed;
+  right: 16px;
+  bottom: 16px;
+}
+
+.custom-button.previous {
+  position: fixed;
+  right: 16px;
+  top: 16px;
+}
+
+.custom-button {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 24px;
 }
