--- a/src/app/pages/home/edit-user/edit-user.component.html
+++ b/src/app/pages/home/edit-user/edit-user.component.html
@@ -107,7 +107,7 @@
       </div>
     </div>
     <div class="row">
-      <a> Cambiar contraseña</a>
+      <a mat-icon-button (click)="cambiar()">Cambiar contraseña</a>
     </div>
     <div class="row justify-content-end mt-5">
       <div class="col-4">
